--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -22,6 +22,7 @@ ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
 # ETHEREUM_JSONRPC_HTTP_HEADERS=
 # ETHEREUM_JSONRPC_WAIT_PER_TIMEOUT=
 # ETHEREUM_JSONRPC_GETH_TRACE_BY_BLOCK=
+# ETHEREUM_JSONRPC_GETH_ALLOW_EMPTY_TRACES=
 IPC_PATH=
 NETWORK_PATH=/
 BLOCKSCOUT_HOST=
