--- a/docker-compose/services/backend.yml
+++ b/docker-compose/services/backend.yml
@@ -15,6 +15,8 @@ services:
       - ETHEREUM_JSONRPC_TRACE_URL=${ETHEREUM_JSONRPC_TRACE_URL}
       - ETHEREUM_JSONRPC_WS_URL=${ETHEREUM_JSONRPC_WS_URL}
       - ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=${ETHEREUM_JSONRPC_FALLBACK_HTTP_URL}
+      - INDEXER_CATCHUP_BLOCKS_CONCURRENCY=1
+      - INDEXER_CATCHUP_BLOCK_INTERVAL=1s
     volumes:
       - ./logs/:/app/logs/
       - ./dets/:/app/dets/
