--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -182,7 +182,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER=
 # INDEXER_DISABLE_WITHDRAWALS_FETCHER=
 # INDEXER_DISABLE_REPLACED_TRANSACTION_FETCHER=
-# INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=
+INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=100
 # INDEXER_CATCHUP_BLOCKS_CONCURRENCY=
 # INDEXER_CATCHUP_BLOCK_INTERVAL=
 # INDEXER_EMPTY_BLOCKS_SANITIZER_INTERVAL=
