--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,8 +1,8 @@
 NEXT_PUBLIC_API_HOST=localhost
 NEXT_PUBLIC_API_PROTOCOL=http
 NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Selendra
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Selendra Network
+NEXT_PUBLIC_NETWORK_NAME=Selendra Network
+NEXT_PUBLIC_NETWORK_SHORT_NAME=Selendra
 NEXT_PUBLIC_NETWORK_ID=1961
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Selendra
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=SEL
@@ -15,3 +15,7 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
 NEXT_PUBLIC_IS_TESTNET=false
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+
+# remporary hide ads 
+NEXT_PUBLIC_AD_BANNER_PROVIDER=none
+NEXT_PUBLIC_AD_TEXT_PROVIDER=none
