--- a/apps/block_scout_web/assets/package.json
+++ b/apps/block_scout_web/assets/package.json
@@ -19,8 +19,8 @@
     "eslint": "eslint js/**"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.2",
     "@amplitude/analytics-browser": "^2.11.13",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@tarekraafat/autocomplete.js": "^10.2.9",
     "@walletconnect/web3-provider": "^1.8.0",
     "assert": "^2.1.0",
@@ -33,6 +33,7 @@
     "crypto-browserify": "^3.12.1",
     "dropzone": "^5.9.3",
     "eth-net-props": "^1.0.41",
+    "globals": "^16.0.0",
     "highlight.js": "^11.11.1",
     "https-browserify": "^1.0.0",
     "humps": "^2.0.1",
@@ -91,7 +92,7 @@
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.19.0",
-    "eslint-config-standard": "^17.1.0",
+    "eslint-formatter-junit": "^8.40.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.6.0",
