--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: k8s-infrastructure-dind
 
     permissions:
       contents: read
@@ -63,9 +63,7 @@ jobs:
         with:
           context: .
           file: ./docker/Dockerfile
-          platforms: |
-            linux/amd64
-            linux/arm64/v8
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
