--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -471,6 +471,7 @@ ACCOUNT_REDIS_URL=redis://redis-db:6379
 # MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_TIMEOUT=
 # MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_BLOCKS_BATCH_SIZE=
 # MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_HIGH_VERBOSITY=
+# HEALTH_MONITOR_CHECK_INTERVAL=5m
 # SOURCIFY_INTEGRATION_ENABLED=false
 # SOURCIFY_SERVER_URL=
 # SOURCIFY_REPO_URL=
