--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -274,6 +274,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_ARBITRUM_DATA_BACKFILL_UNINDEXED_BLOCKS_RECHECK_INTERVAL=
 # INDEXER_ARBITRUM_DATA_BACKFILL_BLOCKS_DEPTH=
 # CELO_CORE_CONTRACTS=
+# CELO_L2_MIGRATION_BLOCK=
 # INDEXER_CELO_VALIDATOR_GROUP_VOTES_BATCH_SIZE=200000
 # INDEXER_DISABLE_CELO_EPOCH_FETCHER=false
 # INDEXER_DISABLE_CELO_VALIDATOR_GROUP_VOTES_FETCHER=false
